WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
30048
[Qt] mouseUp() and mouseDown() in EventSender ignore the button argument
https://bugs.webkit.org/show_bug.cgi?id=30048
Summary
[Qt] mouseUp() and mouseDown() in EventSender ignore the button argument
Jakub Wieczorek
Reported
2009-10-03 12:30:25 PDT
The argument indicates which mouse button should the events concern and is used in some layout tests.
Attachments
patch
(3.60 KB, patch)
2009-10-03 12:33 PDT
,
Jakub Wieczorek
eric
: review-
Details
Formatted Diff
Diff
patch
(4.15 KB, patch)
2009-10-05 11:14 PDT
,
Jakub Wieczorek
no flags
Details
Formatted Diff
Diff
patch
(4.23 KB, patch)
2009-10-05 11:28 PDT
,
Jakub Wieczorek
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Jakub Wieczorek
Comment 1
2009-10-03 12:33:13 PDT
Created
attachment 40581
[details]
patch
Eric Seidel (no email)
Comment 2
2009-10-05 09:22:28 PDT
Comment on
attachment 40581
[details]
patch What is the NoButton default useful for? And why don't we assert() that it's not called? Or are there reasons why mouseDown(3) should silently "fail"? This should list tests which it fixes (assuming the list is relatively short). But in general it looks fine. r- for the possible NoButton confusion. Please explain why NoButton is correct there.
Jakub Wieczorek
Comment 3
2009-10-05 11:14:21 PDT
Created
attachment 40645
[details]
patch (In reply to
comment #2
)
> (From update of
attachment 40581
[details]
) > What is the NoButton default useful for? And why don't we assert() that it's > not called? Or are there reasons why mouseDown(3) should silently "fail"? > > This should list tests which it fixes (assuming the list is relatively short). > But in general it looks fine. r- for the possible NoButton confusion. Please > explain why NoButton is correct there.
Right, NoButton does not make much sense. I took a look at the EventSender from the Windows port and changed the patch to do something similar. So mouseDown(3) will send a middle button event and the fallback button will be the left button.
Jakub Wieczorek
Comment 4
2009-10-05 11:28:17 PDT
Created
attachment 40647
[details]
patch Added the affected layout test to the ChangeLog.
Simon Hausmann
Comment 5
2009-10-05 13:46:34 PDT
Comment on
attachment 40647
[details]
patch Thanks! (also for addressing Eric's comments) Could you make a patch for unskipping the test, too? Btw, please set cq? if you'd like this patch to go through the queue :)
Jakub Wieczorek
Comment 6
2009-10-05 14:07:04 PDT
Comment on
attachment 40647
[details]
patch (In reply to
comment #5
)
> Could you make a patch for unskipping the test, too?
I must say I was going to make a collective patch, which would unskip all the tests that are passing after the recent DRT fixes. Not only the tests that I have spotted the issues with but also those that I have not gone through yet, and which make use of the added/fixed functions and as a result may be fixed now too. Is it fine or should I make individual patches to the Skipped list corresponding to each DRT fix?
WebKit Commit Bot
Comment 7
2009-10-06 04:42:36 PDT
Comment on
attachment 40647
[details]
patch Clearing flags on attachment: 40647 Committed
r49167
: <
http://trac.webkit.org/changeset/49167
>
WebKit Commit Bot
Comment 8
2009-10-06 04:42:39 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug